# cJSON

./: CMakeLists.txt  cJSON.c  cJSON.h
Android/: build.gradle  settings.gradle
Android/cjson/: build.gradle
Android/testapp/: build.gradle
Android/testapp/src/main/: AndroidManifest.xml
Android/testapp/src/main/cpp/: TestAppLib.c
Android/testapp/src/main/java/org/davegamble/cjson/testapp/: MainActivity.java
